# rsrl

./: .clog.toml  .codeclimate.yml  .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  build.rs  changelog.md  rustfmt.toml
examples/: a2c.rs  actor_critic.rs  cacla.rs  greedy_gq.rs  lspi.rs  nac.rs  nac_beta.rs  nac_softmax.rs  openai.rs  pal.rs  polynomial.rs  q_learning.rs  reinforce.rs  sandbox.rs  sarsa_lambda.rs  tdac.rs  tdac_beta.rs
rsrl/: Cargo.toml
rsrl/examples/: a2c.rs  greedy_gq.rs  nac.rs  nac_beta.rs  nac_softmax.rs  pal.rs  polynomial.rs  q_learning.rs  sarsa_lambda.rs  tdac.rs  tdac_beta.rs
rsrl/src/: core.rs  experiment.rs  lib.rs  macros.rs  memory.rs  traces.rs  utils.rs
rsrl/src/control/: ac.rs  cacla.rs  mod.rs  nac.rs
rsrl/src/control/ac/: a2c.rs  cacla.rs  mod.rs  nac.rs  offpac.rs  qac.rs  tdac.rs
rsrl/src/control/gtd/: greedy_gq.rs
rsrl/src/control/mc/: baseline_reinforce.rs  mod.rs  reinforce.rs
rsrl/src/control/td/: expected_sarsa.rs  greedy_gq.rs  mod.rs  pal.rs  q_lambda.rs  q_learning.rs  q_sigma.rs  sarsa.rs  sarsa_lambda.rs  to_q_lambda.rs  to_sarsa_lambda.rs
rsrl/src/control/totd/: mod.rs  to_q_lambda.rs  to_sarsa_lambda.rs
rsrl/src/fa/: composition.rs  linear.rs  mocking.rs  mod.rs  tabular.rs  transformed.rs  transforms.rs
rsrl/src/fa/linear/: gradient.rs  mod.rs  vanilla.rs
rsrl/src/fa/tabular/: dense.rs  mod.rs
rsrl/src/fa/transforms/: exponential.rs  identity.rs  logistic.rs  softplus.rs  tanh.rs
rsrl/src/linalg/: columnar.rs  dense.rs  mod.rs
rsrl/src/params/: columnar.rs  dense.rs  mod.rs  sparse.rs  tile.rs
rsrl/src/policies/: beta.rs  dirichlet.rs  epsilon_greedy.rs  greedy.rs  ipp.rs  mod.rs  perturbation.rs  point.rs  random.rs  shared.rs  softmax.rs
rsrl/src/policies/gaussian/: dbuilder.rs  fixed_var.rs  general.rs  mod.rs  stddev.rs
rsrl/src/prediction/: mc.rs  mod.rs
rsrl/src/prediction/gtd/: gtd2.rs  tdc.rs
rsrl/src/prediction/lstd/: ilstd.rs  lambda_lspe.rs  lstd.rs  lstd_lambda.rs  mod.rs  recursive_lstd.rs
rsrl/src/prediction/mc/: gradient_mc.rs
rsrl/src/prediction/td/: gtd2.rs  gtd_lambda_is.rs  mod.rs  td.rs  td_lambda.rs  td_var.rs  tdc.rs
rsrl/src/traces/: accumulating.rs  dutch.rs  mod.rs  replacing.rs
rsrl_derive/: Cargo.toml
rsrl_derive/src/: lib.rs  parameterised.rs
rsrl_domains/: Cargo.toml
rsrl_domains/src/: acrobot.rs  cart_pole.rs  cliff_walk.rs  consts.rs  grid_world.rs  hiv.rs  lib.rs  macros.rs  ode.rs  roulette.rs
rsrl_domains/src/mountain_car/: continuous.rs  discrete.rs  mod.rs
rsrl_domains/src/openai/: mod.rs
src/: base_traits.rs  consts.rs  core.rs  deref_slice.rs  experiment.rs  lib.rs  loggers.rs  logging.rs  macros.rs  memory.rs  parameter.rs  utils.rs
src/agents/: actor_critic.rs  memory.rs  mod.rs  td.rs  td_zero.rs  trace.rs
src/agents/control/: actor_critic.rs  gtd.rs  lspi.rs  mod.rs  mstd.rs  td.rs  totd.rs
src/agents/control/actor_critic/: mod.rs
src/agents/control/gtd/: greedy_gq.rs  mod.rs
src/agents/control/td/: expected_sarsa.rs  pal.rs  q_lambda.rs  q_learning.rs  q_sigma.rs  sarsa.rs  sarsa_lambda.rs
src/agents/control/totd/: to_q_lambda.rs  to_sarsa_lambda.rs
src/agents/prediction/: gtd.rs  lspe.rs  lstd.rs  mc.rs  mod.rs  td.rs
src/agents/prediction/gtd/: gtd2.rs  mod.rs  tdc.rs
src/control/: mod.rs
src/control/ac/: a2c.rs  cacla.rs  nac.rs  offpac.rs  qac.rs  tdac.rs
src/control/actor_critic/: a2c.rs  cacla.rs  cacla_var.rs  mod.rs  nac.rs  qac.rs  tdac.rs
src/control/gtd/: greedy_gq.rs
src/control/mc/: baseline_reinforce.rs  mod.rs  reinforce.rs
src/control/td/: expected_sarsa.rs  mod.rs  pal.rs  q_lambda.rs  q_learning.rs  q_sigma.rs  sarsa.rs  sarsa_lambda.rs
src/control/totd/: to_q_lambda.rs  to_sarsa_lambda.rs
src/core/: algorithms.rs  experiment.rs  memory.rs  mod.rs  parameter.rs  trace.rs
src/domain/: grid_world.rs  mod.rs  mountain_car.rs
src/domains/: acrobat.rs  acrobot.rs  cart_pole.rs  cliff_walk.rs  grid_world.rs  hiv.rs  mod.rs  mountain_car.rs  ode.rs  snakes_ladders.rs  windy_cliff_walk.rs
src/domains/mountain_car/: continuous.rs  discrete.rs  mod.rs
src/domains/openai/: client.rs  mod.rs
src/fa/: basis_network.rs  fgroup.rs  linear.rs  macros.rs  mocking.rs  mod.rs  partitions.rs  rbf_network.rs  shared.rs  sutton_tiles.rs  table.rs  tabular.rs  transformed.rs  uniform_grid.rs
src/fa/gradients/: arithmetic.rs  column.rs  columnar.rs  matrix.rs  mod.rs  shifting.rs  sparse.rs
src/fa/linear/: compatible.rs  gradient.rs  mod.rs  shared.rs  vanilla.rs
src/fa/projection/: basis_network.rs  fourier.rs  mod.rs  polynomial.rs  rbf_network.rs  sutton_tc.rs  tchs.rs  tile_coding.rs  uniform_grid.rs
src/fa/traces/: accumulating.rs  dutch.rs  mod.rs  replacing.rs
src/fa/transforms/: exponential.rs  identity.rs  logistic.rs  mod.rs  softplus.rs  tanh.rs
src/geometry/: dimensions.rs  kernels.rs  mod.rs  norms.rs  partitioning.rs  projection.rs  spaces.rs  span.rs
src/linalg/: arithmetic.rs  columnar.rs  dense.rs  mod.rs  scaling.rs  sparse.rs
src/policies/: beta.rs  boltzmann.rs  dirac.rs  dirichlet.rs  epsilon_greedy.rs  gamma.rs  greedy.rs  ipp.rs  mod.rs  perturbation.rs  random.rs  shared.rs  softmax.rs
src/policies/fixed/: boltzmann.rs  epsilon_greedy.rs  greedy.rs  mod.rs  random.rs  truncated_boltzmann.rs
src/policies/gaussian/: bivariate.rs  dbuilder.rs  mean.rs  mod.rs  multivariate.rs  stddev.rs  univariate.rs
src/policies/parameterised/: dirac.rs  gaussian.rs  gibbs.rs  mod.rs  pdfs.rs
src/policies/parametrised/: gaussian.rs  gibbs.rs  mod.rs  pdfs.rs
src/prediction/: mod.rs
src/prediction/gtd/: gtd2.rs  gtd_lambda_is.rs  mod.rs  tdc.rs
src/prediction/lstd/: ilstd.rs  lambda_lspe.rs  lstd.rs  lstd_lambda.rs  mod.rs  recursive_lstd.rs
src/prediction/mc/: every_visit_mc.rs  gradient_mc.rs  mod.rs
src/prediction/td/: mod.rs  td.rs  td_lambda.rs  td_var.rs
src/projection/: basis_network.rs  mod.rs  rbf_network.rs  sutton_tc.rs  uniform_grid.rs
src/traces/: mod.rs
src/utils/: kernels.rs  mod.rs
tests/: sandbox.rs  sandbox.rs.bk
(+7 files in other folders)
