[package]
name = "rsrl"
description = "A fast, extensible reinforcement learning framework in Rust"

version = "0.4.2"
authors = ["Tom Spooner <t.spooner@liverpool.ac.uk>"]

license = "MIT"
readme = "README.md"

keywords = ["machine", "reinforcement", "learning", "rl", "ai"]

repository = "https://github.com/tspooner/rsrl"
documentation = "https://docs.rs/rsrl"

[badges]
travis-ci = { repository = "tspooner/rsrl", branch = "master" }
coveralls = { repository = "tspooner/rsrl", branch = "master", service = "github" }

[dependencies]
lfa = "0.3"
spaces = "2.0"

rand = "0.4"
cpython = "0.1"
ndarray = { version = "0.11.2", features = ["blas", "serde-1"] }

serde = "1.0"
serde_derive = "1.0"

slog = "2.1"
slog-term = "2.3"
slog-async = "2.2"

[dev-dependencies]
serde_test = "1.0"

blas-src = { version = "0.1.2", default-features = false, features = ["openblas"] }
openblas-src = { version = "0.5.6", default-features = false, features = ["cblas", "system"] }
