[package]
name = "rsrl"
description = "A fast, extensible reinforcement learning framework in Rust"

version = "0.5.1"
authors = ["Tom Spooner <t.spooner@liverpool.ac.uk>"]

license = "MIT"
readme = "README.md"

keywords = ["machine", "reinforcement", "learning", "rl", "ai"]

repository = "https://github.com/tspooner/rsrl"
documentation = "https://docs.rs/rsrl"

[badges]
travis-ci = { repository = "tspooner/rsrl", branch = "master" }
coveralls = { repository = "tspooner/rsrl", branch = "master", service = "github" }

[features]
default = []

openai = ["cpython"]

[dependencies]
lfa = "0.4"
spaces = "2.2"

rand = "0.5"
cpython = { version = "0.2", optional = true }
ndarray = { version = "0.12", features = ["blas", "serde-1"] }

serde = "1.0"
serde_derive = "1.0"

slog = "2.3"
slog-term = "2.4"
slog-async = "2.3"

[dev-dependencies]
serde_test = "1.0"

blas-src = { version = "0.2", default-features = false, features = ["openblas"] }
openblas-src = { version = "0.6", default-features = false, features = ["cblas", "system"] }
