[package]
name = "rsrl"
description = "A fast, extensible reinforcement learning framework in Rust"

version = "0.7.1"
authors = ["Tom Spooner <t.spooner@liverpool.ac.uk>"]

license = "MIT"
readme = "README.md"

keywords = ["machine", "reinforcement", "learning", "rl", "ai"]

repository = "https://github.com/tspooner/rsrl"
documentation = "https://docs.rs/rsrl"

edition = "2018"

[badges]
travis-ci = { repository = "tspooner/rsrl", branch = "master" }
coveralls = { repository = "tspooner/rsrl", branch = "master", service = "github" }

[features]
default = []

blas = ["ndarray/blas", "lfa/blas"]
serde = ["serde_crate", "lfa/serde", "spaces/serialize", "ndarray/serde", "rstat/serde"]

[dependencies]
rsrl_derive = { path = "../rsrl_derive", version = "0.1" }
rsrl_domains = { path = "../rsrl_domains", version = "0.1" }

lfa = "0.15"
rstat = "0.6"
spaces = "5.0"

rand = "0.7"
rand_distr = "0.2"

ndarray = "0.13"
ndarray-linalg = "0.12"

special-fun = "0.2"

[dependencies.serde_crate]
package = "serde"
optional = true
version = "1.0"
default-features = false
features = ["std", "derive"]

[dev-dependencies]
quickcheck = "0.9"
serde_test = "1.0"

blas-src = { version = "0.4", default-features = false, features = ["openblas"] }
openblas-src = { version = "0.7", default-features = false, features = ["cblas", "system"] }
