[package]
name = "rsrl_derive"
description = "Macros for RSRL"

version = "0.1.0"
authors = ["Tom Spooner <spooner10000@gmail.com>"]

license = "MIT"
readme = "README.md"

keywords = ["machine", "reinforcement", "learning", "rl", "ai"]

repository = "https://github.com/tspooner/rsrl"
documentation = "https://docs.rs/rsrl"

edition = "2018"

[badges]
travis-ci = { repository = "tspooner/rsrl", branch = "master" }
coveralls = { repository = "tspooner/rsrl", branch = "master", service = "github" }

[lib]
name = "rsrl_derive"
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"
