[package]
name = "rsrl_domains"
description = "Toy domains for reinforcement learning research in Rust."

version = "0.2.0"
authors = ["Tom Spooner <t.spooner@liverpool.ac.uk>"]

license = "MIT"
readme = "README.md"

keywords = ["machine", "reinforcement", "learning", "rl", "ai"]

repository = "https://github.com/tspooner/rsrl"
documentation = "https://docs.rs/rsrl_domains"

edition = "2018"

[features]
default = []

openai = ["cpython"]

[dependencies]
rand = "0.8"
spaces = "5.0"

cpython = { version = "0.7", optional = true }
ndarray = { version = "0.15" }
